--- a/index.html
+++ b/index.html
@@ -82,6 +82,55 @@
     </div>
   
   </section>
+
+  <section class="container collections">
+    <h2>Collections</h2>
+    <div class="sub__heading_container">
+      <span>
+        Explore curated lists of top restaurants, cafes, pubs, and bars in Delhi NCR, based on trends
+      </span>
+      <span>
+        All collectons in Delhi NCR
+      </span>
+    </div>
+    <div class="collections_card_container">
+      <div class="card card1">
+        <div class="overlay"></div>
+        <div class="content">
+          <h4>Insta-worthy places</h4>
+          <span>16 Places</span>
+        </div>
+      </div>
+
+      <div class="card card2">
+        <div class="overlay"></div>
+        <div class="content">
+          <h4>Live Cricket Screening</h4>
+          <span>5 Places</span>
+        </div>
+      </div>
+
+      <div class="card card3">
+        <div class="overlay"></div>
+        <div class="content">
+          <h4>Romantic Dining</h4>
+          <span>14 Places</span>
+        </div>
+      </div>
+
+      <div class="card card4">
+        <div class="overlay"></div>
+        <div class="content">
+          <h4>New in Town</h4>
+          <span>12 Places</span>
+        </div>
+      </div>
+
+
+
+    </div>
+  </section>
+
 </body>
 
 </html>
